[gd_scene load_steps=7 format=3 uid="uid://dqbykrqs8vdbw"]

[ext_resource type="Texture2D" uid="uid://ddy845b6jy13w" path="res://assets/kenney_topdowntanksredux/Spritesheet/onlyObjects_default.png" id="1"]
[ext_resource type="Script" uid="uid://dflttxy40x6j8" path="res://weapons/Weapon.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://b7iwgdjax0emh" path="res://assets/topdown-shooter/PNG/weapon_silencer.png" id="4"]

[sub_resource type="Animation" id="1"]
resource_name = "muzzle_flash"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MuzzleFlash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MuzzleFlash:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.5, 1.2)]
}

[sub_resource type="Animation" id="2"]
resource_name = "reload"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -90.0, 0.0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_stop_reload"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r7tl5"]
_data = {
&"muzzle_flash": SubResource("1"),
&"reload": SubResource("2")
}

[node name="Weapon" type="Node2D"]
script = ExtResource("2")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("4")

[node name="EndOfGun" type="Marker2D" parent="."]
position = Vector2(16, 0)

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="MuzzleFlash" type="Sprite2D" parent="."]
visible = false
position = Vector2(28, 0)
rotation = -1.5708
texture = ExtResource("1")
region_enabled = true
region_rect = Rect2(324, 334, 20, 25)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_r7tl5")
}
